First way to fecth the data from serve using axios

--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <title>Swedish | language</title>
-    <script src="script.js"></script>
 </head>
 
 <body>
-    hello
+    <textarea name="" id="text" cols="30" rows="10"></textarea>
+    <button id="btn">Click</button>
+    <div id="text-converted" style="border: 1px solid red; width: 100px; height: 100px;">
 
+    </div>
+    <script src="script.js"></script>
 </body>
+<style>
+
+</style>
 
 </html>
