Docs - UI complete

--- a/index.html
+++ b/index.html
@@ -27,23 +27,39 @@
                     <a href="#github">Github</a>
                 </li>
                 <li class="show">
-                    <a href="#linkdin">Linkdin</a>
+                    <a href="#linkdin">Linkedin</a>
                 </li>
             </ul>
         </nav>
     </div>
-    <textarea name="" id="text" cols="30" rows="10"></textarea>
-    <button id="btn">Click</button>
-    <div id="text-converted" style="border: 1px solid red; width: 100px; height: 100px; background-color: #fff;">
 
+    <div class="main-container">
+        <h1>Enter Your Text 👇</h1>
+        <textarea name="" id="text" cols="30" rows="10"></textarea>
+        <div class="button-container">
+            <button id="btn">Click</button>
+        </div>
+
+        <div id="text-converted">
+            Check Your Result here...
+        </div>
     </div>
+
+    <section class="footer-container">
+        <h4>About App</h4>
+        <p class="footer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Neque, fugit at natus fuga adipisci repellendus
+            repellat expedita numquam omnis cupiditate corrupti ducimus ea sit, placeat ipsa ullam dolore! Sequi,
+            dolorem!</p>
+        <!-- <hr> -->
+        <hr style="width:50%" , size="1" , color=black>
+        <p>Made with ❤ Happy Coding</p>
+    </section>
+
     <script src="script.js"></script>
 </body>
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-    }
+
 </style>
 <script>
 
