Docs - Add Text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/black-rose" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fb676f87ae.js" crossorigin="anonymous"></script>
     <link href="styles.css" rel="stylesheet">
     <title>Swedish | language</title>
@@ -21,21 +22,21 @@
             <ul>
                 <!-- <button>X</button> -->
                 <li class="show">
-                    <a href="#aboutMe">PortFolio</a>
+                    <a href="https://paul889-portfolio.netlify.app">PortFolio</a>
                 </li>
                 <li class="show">
-                    <a href="#github">Github</a>
+                    <a href="https://github.com/paul-coder-22/swedishtranslator">Github</a>
                 </li>
                 <li class="show">
-                    <a href="#linkdin">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/kiron-paul-1b81111b1/">Linkedin</a>
                 </li>
             </ul>
         </nav>
     </div>
 
     <div class="main-container">
-        <h1>Enter Your Text 👇</h1>
-        <textarea name="" id="text" cols="30" rows="10"></textarea>
+        <h1>Convert Your Text To Pirate Language 👇</h1>
+        <textarea name="" id="text" cols="30" rows="5" placeholder="Write Something You Want to Translate"></textarea>
         <div class="button-container">
             <button id="btn">Click</button>
         </div>
@@ -47,10 +48,9 @@
 
     <section class="footer-container">
         <h4>About App</h4>
-        <p class="footer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Neque, fugit at natus fuga adipisci repellendus
-            repellat expedita numquam omnis cupiditate corrupti ducimus ea sit, placeat ipsa ullam dolore! Sequi,
-            dolorem!</p>
+        <p class="footer-text">Are you a Pirate fan? Do you know that how pirate speak is an actual language. Use this
+            translator to
+            convert you thoughts from English to Pirate language</p>
         <!-- <hr> -->
         <hr style="width:50%" , size="1" , color=black>
         <p>Made with ❤ Happy Coding</p>
